# codebase-fastapi.py

./: .env.example  .gitignore  README.md  alembic.ini  cli.py  main.py  pyproject.toml  pytest.ini
.cursor/rules/: project.mdc  python-fastapi.mdc
src/: cli.py
src/app/bases/: app.py  app_auth.py  app_cache.py  app_config.py  app_console.py  app_context.py  app_controller.py  app_database.py  app_disk.py  app_event.py  app_event_base.py  app_event_listener.py  app_http.py  app_i18n.py  app_listener_base.py  app_log.py  app_mail.py  app_middleware.py  app_provider.py  app_queue.py  app_queue_processor.py  app_realtime.py  app_repository.py  app_schedule_loader.py  app_scheduler.py  app_security.py  app_service.py  app_static.py  app_view.py
src/app/configs/: app_config.py  auth_config.py  cache_config.py  database_config.py  disk_config.py  log_config.py  mail_config.py  playground_config.py  queue_config.py  swagger_config.py  webpush_config.py
src/app/constants/: queue_constants.py
src/app/contracts/: app_helper_contract.py  app_provider_contract.py
src/app/controllers/: app_controller.py
src/app/dependencies/: app_auth_api_dependency.py  app_auth_graphql_dependency.py  app_database_dependency.py  app_rate_limit.py  app_url_guard.py
src/app/dtos/: app_dto.py  app_response_dto.py
src/app/exceptions/: general_exception_handler.py  http_exception_handler.py  validation_exception_handler.py
src/app/helpers/: package_helper.py
src/app/langs/: en.json  id.json
src/app/processors/: app_export_processor.py  app_import_processor.py
src/app/providers/: app_http_provider.py  app_view_provider.py
src/app/repositories/: app_mongonosql_repository.py  app_postgresql_repository.py  app_repository.py
src/app/routes/: app_http_router.py  app_ws_router.py
src/app/schemas/: app_schema.py
src/app/utils/: app_avatar_storage.py  app_module_scanner.py  app_query_parser.py  app_queue_priority.py  app_queue_retry.py  (+1 more)
test/: conftest.py  helpers.py  test_status.py
test/v1/: test_notification.py  test_user.py  test_webpush.py
(+87 files in other folders)
